# StudentHome

./: .gitignore
Data/: StudentData.txt  test.txt
StudentHome/: AdminView.cpp  AdminView.h  All.cpp  All.h  Star.cpp  Student.cpp  Student.h  StudentHome.sln  StudentHome.vcxproj  StudentHome.vcxproj.filters  StudentView.cpp  StudentView.h  admin.cpp  admin.h  game.h  main.cpp
StudentHome/StudentHome/: AdminView.h  Student.cpp  Student.h  StudentHome.aps  StudentHome.vcxproj  StudentHome.vcxproj.filters  StudentView.cpp  StudentView.h  admin.cpp  admin.h  main.cpp  resource1.h
StudentHome/StudentHome/StudentHome/: AdminView.h  All.cpp  All.h  Star.cpp  Star.h  Student.cpp  Student.h  StudentHome.vcxproj  StudentView.cpp  StudentView.h  game.h  main.cpp
StudentHome/StudentHome/StudentHome/x64/Debug/: StudentHome.exe.recipe  StudentHome.ilk  studentview.obj.enc  vc143.idb
StudentHome/StudentHome/x64/Debug/: StudentHome.ilk  vc143.idb
StudentHome/StudentHome/x64/Debug/StudentHome.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  StudentHome.lastbuildstate  link.command.1.tlog  (+2 more)
StudentHome/enc_temp_folder/21d6843925ef7247f4615f69cd80cb19/: Student.cpp
StudentHome/x64/Debug/: StudentHome.exe.recipe  StudentHome.ilk  vc143.idb
StudentHome/x64/Debug/StudentHome.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  StudentHome.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
doc/: 项目类图.drawio
icpac_Control/: CMakeLists.txt  README.md
icpac_Control/include/: AdminView.h  All.h  CalculagraphModel.h  LoginRegisterModule.h  Star.h  StudentModel.h  StudentView.h  Teacher.h  UserView.h  admin.h  game.h
icpac_Control/lib/lib-easyx/include/: EasyButton.h
icpac_Control/lib/lib-easyx/src/: EasyButton.cpp
icpac_Control/resources/Data/: test.txt
icpac_Control/scripts/: start_windows.bat
icpac_Control/src/: AdminView.cpp  All.cpp  CalculagraphModel.cpp  LoginRegisterModule.cpp  Star.cpp  StudentModel.cpp  StudentView.cpp  Teacher.cpp  UserView.cpp  admin.cpp  main.cpp
icpac_Control/tests/AdminViewTest/: CMakeLists.txt
icpac_Control/tests/AdminViewTest/src/: adminviewmain.cpp
(+8 files in other folders)
